--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,16 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AI Project - Evacuation Navigator</title>
+  <title>AI Project – Emergency Evacuation Navigator</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Evacuation Path:</h1>
-    <input type="text" id="startNode" placeholder="Enter start node (A, B, etc.)">
-    <button id="findPathBtn">Find Evacuation Path</button>
-    <p id="pathOutput"></p>
+    <h1> Emergency Evacuation Navigator</h1>
+
+    <div class="form-section">
+      <input type="text" id="startNode" placeholder="Enter your location node (e.g., A, B)" />
+      <button id="findPathBtn">Find Safe Path</button>
+    </div>
+
+    <div class="result-box">
+      <h3>Evacuation Path:</h3>
+      <p id="pathOutput">Awaiting input...</p>
+    </div>
   </div>
+
   <script src="main.js"></script>
 </body>
 </html>
